@@ -61,7 +61,8 @@ import { CorefSpanEndComponent } from './components/controls/coref/coref-span-en
 import { CorefSpanStartComponent } from './components/controls/coref/coref-span-start/coref-span-start.component';
 import { FoundInCollectionDirective } from './directives/found-in-collection/found-in-collection.directive';
 import { TextWidgetComponent } from './components/controls/text-widget/text-widget.component';
-import { DomHelpersDirective } from './directives/dom-helpers/dom-helpers.directive';
+// import { DomHelpersDirective } from './directives/dom-helpers/dom-helpers.directive';
+import { DocumentAttributesDirective } from './directives/document-attributes/document-attributes.directive';
 import { AnnotatorWidgetComponent } from './components/controls/annotator-widget/annotator-widget.component';
 import { AnnotationTextLabelComponent } from './components/controls/document/annotation-text-label/annotation-text-label.component';
 import { AnnotationTextTextComponent } from './components/controls/document/annotation-text-text/annotation-text-text.component';
@@ -164,7 +165,8 @@ export function TranslateHttpLoaderFactory(http: HttpClient) {
     CorefSpanStartComponent,
     FoundInCollectionDirective,
     TextWidgetComponent,
-    DomHelpersDirective,
+    // DomHelpersDirective,
+    DocumentAttributesDirective,
     AnnotatorWidgetComponent,
     AnnotationTextLabelComponent,
     AnnotationTextTextComponent,
@@ -264,7 +266,8 @@ export function TranslateHttpLoaderFactory(http: HttpClient) {
     CorefSpanStartComponent,
     FoundInCollectionDirective,
     TextWidgetComponent,
-    DomHelpersDirective,
+    // DomHelpersDirective,
+    DocumentAttributesDirective,
     AnnotatorWidgetComponent,
     AnnotationTextLabelComponent,
     AnnotationTextTextComponent,
