@@ -13,12 +13,12 @@
         <ng-container matColumnDef="spans">
           <th mat-header-cell *matHeaderCellDef>Spans</th>
           <td mat-cell *matCellDef="let annotation" class="overflow-ellipsis">
-            {{annotation.spans[0].start}}:{{annotation.spans[0].end}}</td>
+          {{(annotation.spans.length > 0) ? annotation.spans[0].start.toString()+':'+annotation.spans[0].end.toString() : ""}}</td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="annotationListDisplayedColumns; sticky: true"></tr>
         <tr mat-row (click)="setSelectedAnnotation(row)" [ngClass]="{ selected: row._id == selectedIndex }"
           *matRowDef="let row; columns: annotationListDisplayedColumns;"
-	  class="annotation-row"></tr>
+          class="annotation-row"></tr>
         <tr class="mat-row" *matNoDataRow>
           <td class="mat-cell">No data matching the filter</td>
         </tr>
@@ -32,7 +32,7 @@
         </ng-container>
         <ng-container matColumnDef="value">
           <th mat-header-cell *matHeaderCellDef>Value</th>
-          <td mat-cell *matCellDef="let property" class="overflow-ellipsis">{{property.value}}</td>
+          <td mat-cell *matCellDef="let property" class="preformated">{{property.value}}</td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="selectedAannotationDisplayedColumns; sticky: true"></tr>
         <tr mat-row *matRowDef="let row; columns: selectedAannotationDisplayedColumns;"></tr>
