@@ -1,1 +1,1 @@
-<div ><!--group-type="{{groupType}}" <ng-transclude></ng-transclude>--></div>
+<ng-content></ng-content>
