@@ -1,1 +1,1 @@
-<textarea class="form-control annotation-paragraph-text"  [(ngModel)]="attributeValue" (focus)="onFocus()" (blur)="onBlur()"></textarea><!--group-type="{{groupType}}"-->
+<textarea class="form-control annotation-paragraph-text" [(ngModel)]="attributeValue" (focus)="onFocus()" (blur)="onBlur()"></textarea>
