@@ -1,1 +1,1 @@
-<!--<ng-transclude></ng-transclude>-->
+<ng-content></ng-content>
