@@ -1,0 +1,8 @@
+import { DocumentAttributesDirective } from './document-attributes.directive';
+
+describe('DocumentAttributesDirective', () => {
+  it('should create an instance', () => {
+    const directive = new DocumentAttributesDirective();
+    expect(directive).toBeTruthy();
+  });
+});
